<resources>
    <string name="app_name">MenuDemo</string>
    <string name="action_settings">Settings</string>

    <string name="title_search">Search</string>
    <string name="title_share">Share</string>
    <string name="title_red">Red</string>
    <string name="title_green">Green</string>
    <string name="title_blue">Blue</string>
    <string name="title_purple">Purple</string>
    <string name="title_notification">Notification</string>
</resources>
